--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,16 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
+
+    signingConfigs {
+        release {
+            storeFile file("welfarevideo.jks")
+            storePassword "huxinwu123"
+            keyAlias "welfarevideo"
+            keyPassword "huxinwu123"
+        }
+    }
+
     defaultConfig {
         applicationId "com.jingdl.welfarevideo"
         minSdkVersion 14
@@ -11,7 +21,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
-            abiFilters 'armeabi'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
         }
         jackOptions {
             enabled true
@@ -20,6 +30,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
